# edge-workspaces-url-extractor

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  README.md  edge-workspace-links-gui-backend.spec  edge-workspace-links.spec  edge_workspace_links.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  implementation_task.yml  maintainer_override.yml  maintenance.yml  ops_incident.yml
.github/scripts/: validate_contribution_guardrails.py
.github/workflows/: ci.yml  contribution-guardrails.yml  release.yml
docs/: flutter-ui-evaluation.md  rust-evaluation.md
docs/agent-memory/: decision-log.md  repo-overview.md  work-log.md
gui/flutter_app/: README.md  pubspec.yaml
gui/flutter_app/lib/: app_shell.dart  main.dart
gui/flutter_app/lib/features/run_analysis/: run_analysis_page.dart
gui/flutter_app/lib/models/: analysis_response.dart
gui/flutter_app/lib/services/: backend_runner.dart  path_picker.dart
gui/flutter_app/linux/: CMakeLists.txt
gui/flutter_app/linux/runner/: CMakeLists.txt  my_application.cc
gui/flutter_app/macos/Runner/: MainFlutterWindow.swift
gui/flutter_app/macos/Runner.xcodeproj/: project.pbxproj
gui/flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
gui/flutter_app/macos/Runner/Configs/: AppInfo.xcconfig
gui/flutter_app/test/: widget_test.dart
gui/flutter_app/windows/: CMakeLists.txt
gui/flutter_app/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
parity/: cases.json  fixture_builder.py
rust/edge-workspace-links-rs/: Cargo.toml
rust/edge-workspace-links-rs/src/: main.rs
scripts/: benchmark_extraction.py  benchmark_rust_compare.py  check_rust_parity.py  check_wheel_install.py  package_windows_ui_bundle.py  release_version.py  smoke_gui_backend.py  smoke_packaged_cli.py
src/: edge_workspace_links.py
src/edge_workspace_links_app/: __init__.py  cli.py  exporters.py  gui_backend.py  models.py  parser.py  reporting.py
tests/: conftest.py  helpers.py  test_cli_quality_gates.py  test_contribution_guardrails.py  test_edge_workspace_links.py  test_gui_backend.py  test_gui_backend_smoke.py  test_package_windows_ui_bundle.py  test_parity_cases.py  test_release_version.py
