[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-workspace-links"
version = "0.1.0"
description = "Extract open tab URLs and favorites from Microsoft Edge Workspace .edge files."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openpyxl>=3.1,<4",
]

[project.scripts]
edge-workspace-links = "edge_workspace_links_app.cli:cli"

[project.optional-dependencies]
dev = [
  "build>=1,<2",
  "pytest>=8,<9",
]
test = [
  "build>=1,<2",
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["edge_workspace_links"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
